--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@ h2 {
 }
 
 main {
-  padding: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,4 +21,56 @@ main {
 p {
   max-width: 60vw;
   color: #032947;
+}
+
+button {
+  text-decoration: none;
+  margin-top: 30px;
+  color: #F2F2F2;
+  background-color: #0762AD;
+  padding: 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 550;
+  border: none;
+  cursor: pointer;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+  font-size: 13px;
+}
+
+form {
+  display: flex;
+}
+
+input {
+  margin-top: 3px;
+  border-radius: 10px;
+  border: #043761 solid 1px;
+  font-size: 14px;
+  width: 110px;
+  text-indent: 15px;
+  height: 22px;
+}
+
+input:focus {
+  outline: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+span {
+  padding: 8px;
+  background-color: #0EA195;
+  color: #F2F2F2;
+  border-radius: 20px;
 }
