--- a/src/Pages/Calculator/Calculator.css
+++ b/src/Pages/Calculator/Calculator.css
@@ -1,6 +1,6 @@
 #calculator-page {
   height: 100vh;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 #calculator-title {
@@ -19,4 +19,66 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.form-button {
+  text-decoration: none;
+  margin-top: 30px;
+  color: #F2F2F2;
+  background-color: #0762AD;
+  padding: 8px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: 550;
+  border: none;
+  cursor: pointer;
+}
+
+.form-input {
+  margin-top: 3px;
+  border-radius: 10px;
+  border: #043761 solid 1px;
+  font-size: 14px;
+  width: 110px;
+  text-indent: 15px;
+  height: 22px;
+}
+
+.form-input:focus {
+  outline: none;
+}
+
+.form-input::-webkit-outer-spin-button,
+.form-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+#answer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.answer {
+  width: 170px;
+}
+
+#status {
+  width: 306px;
+}
+
+#status-anchor {
+  background-color: #3C7CB0;
+}
+
+#clear-button {
+  background-color: #A11B16;
+}
+
+#form-buttons-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
 }
