--- a/src/Pages/Calculator/Calculator.css
+++ b/src/Pages/Calculator/Calculator.css
@@ -61,12 +61,19 @@
   justify-content: center;
 }
 
-.answer {
+.complete-answer {
   width: 180px;
 }
 
 #status {
   width: 306px;
+}
+
+.answer-anchor {
+  padding: 8px;
+  background-color: #0EA195;
+  color: #F2F2F2;
+  border-radius: 20px;
 }
 
 #status-anchor {
